@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'io.jcrpc'
-version = '0.1.0'
+version = '0.3.0'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_11
@@ -18,6 +18,19 @@ repositories {
 dependencies {
     implementation 'com.klinec:jcardsim:3.0.5.9'
     implementation files('libs/smartcardio.jar')
+
+    testImplementation platform('org.junit:junit-bom:5.11.4')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+test {
+    useJUnitPlatform()
+    jvmArgs '--add-modules', 'java.smartcardio'
+    testLogging {
+        events 'passed', 'skipped', 'failed'
+        exceptionFormat 'full'
+    }
 }
 
 application {
